fixed layout on small screen

--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -9,7 +9,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-
+justify-content: space-between;
   height: 100vh;
 }
 .homePage__headerContainer {
